[FLINK-40373][table] `JSON_VALUE` might fail on code gen for null input